# marimo-lib

./: .gitignore  README.md  pyproject.toml
notebook/: demo.py  plot_samples.py
notebook/__marimo__/: demo.html
notebook/data/: schedule.csv
src/marimo_lib/: __init__.py  image.py  plot.py
src/marimo_lib/static/: excali.js
src/marimo_lib/util/: __init__.py  excalidraw.py  image.py  plot.py  schedule.py
src/marimolib/: __init__.py  image.py  plotly.py
